Add Function Alias(tested)

--- a/config/history
+++ b/config/history
@@ -229,3 +229,80 @@ ls
 ls
 ls
 l
+ls
+l
+alias ls = ls -l
+ls
+ls
+ls
+ls
+ls
+ls
+alias ls -
+alias ls -
+alias ls += -l
+ls
+alias ls -
+alias ls -
+alias ls -
+alias ls -
+alias ls -
+alias ls -
+alias ls -
+alias ls -
+alias ls -
+alias ls -
+ls
+alias ls -
+alias ls -
+alias ls -
+alias ls -
+alias ls -
+alias ls -
+alias ls -
+alias ls -
+alias ls += -l
+ls
+ls
+ls -l
+ls -a
+alias ls += -l
+alias ls += --color=auto
+ls
+ls
+ls
+ls
+ls
+ ls
+ls
+alias ls += --color=tty
+alias ls += -l
+alias ls += --color=tty
+ls
+ls
+ls
+ls
+alias ls += --color=tty
+ls
+echo
+ehco ls
+echo h
+alias ls += -l
+ls
+alias ls += -l
+ls
+alias ls += -l
+ls
+alias ls += -l
+ls
+alias ls += -l
+ls
+alias ls += -l
+ls
+alias ls += -l
+ls
+alias ls -
+ls
+ls
+alias ls += --color=tty
+ls
